feat: melhorar dataset

--- a/ler_csv_meliponas.ipynb
+++ b/ler_csv_meliponas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4eb2dea9",
    "metadata": {},
    "outputs": [],
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "06024490",
    "metadata": {},
    "outputs": [],
    "source": [
     "def nomePasta(nome, caminho):\n",
-    "    return f'../Imagens/{caminho}/{nome.split(\" \")[0]}/' if \" \" in nome else f'{caminho}/'\n",
+    "    return f'./Imagens/{caminho}/{nome.split(\" \")[0]}/' if \" \" in nome else f'{caminho}/'\n",
     "\n",
     "\n",
     "def plotarMapaDeCalor(meliponas, nome):\n",
