feat: arrumar datasets e preparar para o modelo

--- a/ler_tiffs_temperatura_preciptacao.ipynb
+++ b/ler_tiffs_temperatura_preciptacao.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,39 +181,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-33.7667</td>\n",
-       "      <td>-53.00</td>\n",
-       "      <td>-0.085265</td>\n",
-       "      <td>0.205043</td>\n",
+       "      <th>83946</th>\n",
+       "      <td>-13.71</td>\n",
+       "      <td>-73.78</td>\n",
+       "      <td>0.517695</td>\n",
+       "      <td>-0.521197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-33.7567</td>\n",
-       "      <td>-53.00</td>\n",
-       "      <td>-0.085106</td>\n",
-       "      <td>0.204434</td>\n",
+       "      <th>83947</th>\n",
+       "      <td>-13.70</td>\n",
+       "      <td>-73.78</td>\n",
+       "      <td>0.534019</td>\n",
+       "      <td>-0.532493</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-33.7467</td>\n",
-       "      <td>-53.00</td>\n",
-       "      <td>-0.080180</td>\n",
-       "      <td>0.209891</td>\n",
+       "      <th>83948</th>\n",
+       "      <td>-13.69</td>\n",
+       "      <td>-73.78</td>\n",
+       "      <td>0.591257</td>\n",
+       "      <td>-0.564566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-33.7367</td>\n",
-       "      <td>-53.00</td>\n",
-       "      <td>-0.097075</td>\n",
-       "      <td>0.238046</td>\n",
+       "      <th>83949</th>\n",
+       "      <td>-13.68</td>\n",
+       "      <td>-73.78</td>\n",
+       "      <td>0.632028</td>\n",
+       "      <td>-0.594361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-33.7267</td>\n",
-       "      <td>-53.00</td>\n",
-       "      <td>-0.096325</td>\n",
-       "      <td>0.242810</td>\n",
+       "      <th>83950</th>\n",
+       "      <td>-13.67</td>\n",
+       "      <td>-73.78</td>\n",
+       "      <td>0.648493</td>\n",
+       "      <td>-0.592593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -223,63 +223,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7112348</th>\n",
-       "      <td>-2.1267</td>\n",
-       "      <td>-34.79</td>\n",
+       "      <th>15295100</th>\n",
+       "      <td>-2.13</td>\n",
+       "      <td>-34.80</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7112349</th>\n",
-       "      <td>-2.1167</td>\n",
-       "      <td>-34.79</td>\n",
+       "      <th>15295101</th>\n",
+       "      <td>-2.12</td>\n",
+       "      <td>-34.80</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7112350</th>\n",
-       "      <td>-2.1067</td>\n",
-       "      <td>-34.79</td>\n",
+       "      <th>15295102</th>\n",
+       "      <td>-2.11</td>\n",
+       "      <td>-34.80</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7112351</th>\n",
-       "      <td>-2.0967</td>\n",
-       "      <td>-34.79</td>\n",
+       "      <th>15295103</th>\n",
+       "      <td>-2.10</td>\n",
+       "      <td>-34.80</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7112352</th>\n",
-       "      <td>-2.0867</td>\n",
-       "      <td>-34.79</td>\n",
+       "      <th>15295104</th>\n",
+       "      <td>-2.09</td>\n",
+       "      <td>-34.80</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5181712 rows × 4 columns</p>\n",
+       "<p>9272393 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Latitude  Longitude      NDVI      NDWI\n",
-       "0        -33.7667     -53.00 -0.085265  0.205043\n",
-       "1        -33.7567     -53.00 -0.085106  0.204434\n",
-       "2        -33.7467     -53.00 -0.080180  0.209891\n",
-       "3        -33.7367     -53.00 -0.097075  0.238046\n",
-       "4        -33.7267     -53.00 -0.096325  0.242810\n",
-       "...           ...        ...       ...       ...\n",
-       "7112348   -2.1267     -34.79  0.000000  0.000000\n",
-       "7112349   -2.1167     -34.79  0.000000  0.000000\n",
-       "7112350   -2.1067     -34.79  0.000000  0.000000\n",
-       "7112351   -2.0967     -34.79  0.000000  0.000000\n",
-       "7112352   -2.0867     -34.79  0.000000  0.000000\n",
+       "          Latitude  Longitude      NDVI      NDWI\n",
+       "83946       -13.71     -73.78  0.517695 -0.521197\n",
+       "83947       -13.70     -73.78  0.534019 -0.532493\n",
+       "83948       -13.69     -73.78  0.591257 -0.564566\n",
+       "83949       -13.68     -73.78  0.632028 -0.594361\n",
+       "83950       -13.67     -73.78  0.648493 -0.592593\n",
+       "...            ...        ...       ...       ...\n",
+       "15295100     -2.13     -34.80  0.000000  0.000000\n",
+       "15295101     -2.12     -34.80  0.000000  0.000000\n",
+       "15295102     -2.11     -34.80  0.000000  0.000000\n",
+       "15295103     -2.10     -34.80  0.000000  0.000000\n",
+       "15295104     -2.09     -34.80  0.000000  0.000000\n",
        "\n",
-       "[5181712 rows x 4 columns]"
+       "[9272393 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -312,14 +312,13 @@
     "\n",
     "# Abrir o TIFF uma vez e coletar os valores\n",
     "with rasterio.open(tiff_path) as src:\n",
-    "    valores = [val[0] for val in tqdm(src.sample(coords), total=len(coords), desc=\"Lendo pixels\")]\n",
-    "\n",
-    "df['Max-Media'] = valores"
+    "    maxmedia = [val[0] for val in tqdm(src.sample(coords), total=len(coords), desc=\"Lendo pixels\")]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -339,9 +338,7 @@
     "\n",
     "# Abrir o TIFF uma vez e coletar os valores\n",
     "with rasterio.open(tiff_path) as src:\n",
-    "    valores = [val[0] for val in tqdm(src.sample(coords), total=len(coords), desc=\"Lendo pixels\")]\n",
-    "\n",
-    "df['Min-Media'] = valores"
+    "    minmedia = [val[0] for val in tqdm(src.sample(coords), total=len(coords), desc=\"Lendo pixels\")]\n"
    ]
   },
   {
