--- a/modelo.ipynb
+++ b/modelo.ipynb
@@ -31,13 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5a936063",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../Dados/coordenadas_com_ocorrencias_especie.csv', index_col=0)\n",
-    "df['especie_abelha'] = df['especie_abelha'].apply(ast.literal_eval)"
+    "df['especie_abelha'] = df['especie_abelha'].apply(ast.literal_eval)\n",
+    "\n",
+    "df"
    ]
   },
   {
